--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Car</li>
+		<li data-ns-test="shoppingList">Television</li>
+		<li data-ns-test="shoppingList">Food</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">France</li>
+		<li data-ns-test="holidayList">Hawaii</li>
+		<li data-ns-test="holidayList">Netherlands</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
